--- a/src/index.css
+++ b/src/index.css
@@ -72,6 +72,8 @@ a {
   cursor: pointer;
   text-align: center;
   transition: background-color 0.3s ease, transform 0.2s ease;
+  margin-left:150px;
+  margin-right:150px;
 }
 
 .btn:hover {
